# blaze_telescope

./: Cargo.toml  LICENSE.MD  README.md
.github/workflows/: rust.yml
docs/: pull_request_template.md
src/: lib.rs  plugin_action.rs  plugin_helpers.rs  plugin_popup.rs  sfs_telescope.rs  simple_input_machine.rs  telescope_backend.rs  telescope_commands.rs  telescope_input_machine.rs  telescope_query.rs
tests/folder_1/: example_file.xlsx
